<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="app.gavin.carpathrecorder.MainActivity">
    <item
        android:id="@+id/action_start_service"
        android:orderInCategory="100"
        android:title="@string/start_service"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_close_service"
        android:orderInCategory="100"
        android:title="@string/close_service"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_update_apk"
        android:orderInCategory="100"
        android:title="@string/update_apk"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_test"
        android:orderInCategory="100"
        android:title="@string/test"
        app:showAsAction="never" />

</menu>
